  * Generalize and update requirements.txt
  * Do not decode HTTP responses, as this brakes binary protocols (e.g. BSON)
  * Do not use mutable default arguments, this is dangerous. See:
	http://pythonconquerstheuniverse.wordpress.com/2012/02/15/mutable-default-arguments/
  * The test cases now use the content handler specified by the MIME
    environment variable.

RestAuthClient 0.6.1 (01 April 2013)

  * Add --part option to setup.py to only test part of the test-suite.
  * Add a small benchmark script to test performance of RestAuth services.
  * Fix intersphinx documentation.
  * Cleanup of import statements.
  * Use cleaner isinstance() instead of ...__class__ == <class>
  * Switch to distribute
  * add install_requires to setup.py

RestAuthClient 0.6.0 (15 September 2012)

  This release adds support for version 0.6 of the RestAuth protocol. This
  brings the following enhancements:
  * Support for HTTP status code 403 FORBIDDEN
  * Support for setting multiple user properties in a single HTTP call.

  General:
  * The whole code is now pep8 clean

RestAuthClient 0.5.1 (13 November 2011)

  General:
  * remove false statement that this library depends on python-mimeparse
  * Adapt to changes in newest RestAuthCommon version
  * RestAuthConnection.set_content_handler also accepts unicode
  
  build-related:
  * 'clean' target now removes more generated files
  * handle version in a more centralized way
  * The 'debian' branch now includes a ready-to-use debian package.
  * The new command 'prepare_debian_changelog' updates debian/changelog to the
    newest version
  
  test functions:
  * restauth_user.create_test, User.create_property_test and group.create_test
    now behave exactly like their non-test counterparts. The only difference
    is that user and group creation test methods do not return an instance of
    their respective classes.
  * create_property_test now also throws PreconditionFailed
  * Added documentation to the test methods
  